NCI-Agency/anet#3698: Fix right aligned labels on small screens
Input labels remained right aligned on small windows.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1270,4 +1270,8 @@ header.searchPagination {
   fieldset {
     padding: 1em;
   }
+
+  .form-horizontal .form-label {
+    text-align: left;
+  }
 }
